Fix some typos in dashboards
