# app/definitions/api/v1/swagger/person_record.rb
@@ -37,7 +37,6 @@ class Api::V1::Swagger::PersonRecord
           'NHS Start Date' => { type: 'date', example: '2003-07-01', 'x-nullable': true },
           'Last Update Date' => { type: 'date', example: '2017-05-01', 'x-nullable': true },
           'Disability Flag' => { type: 'string', example: 'N', 'x-nullable': true },
-          'Ins_Upd_TimeStamp' => { type: 'date-time', example: '2020-04-07T14:53:54.000Z', 'x-nullable': true }
         }
       },
       person_records_response: {
